(subdir dist/worker
 (rule
  (alias worker-build)
  (targets thunder_runtime.mjs (dir thunder_runtime.assets))
  (deps %{dep:../../packages/thunder_worker/wasm_entry.bc})
  (action
   (run
   wasm_of_ocaml
   compile
   -o
    thunder_runtime.mjs
    %{dep:../../packages/thunder_worker/wasm_entry.bc}))))

(alias
 (name worker-build)
 (deps
  dist/worker/thunder_runtime.mjs
  (glob_files dist/worker/thunder_runtime.assets/*)
  worker_runtime/index.mjs))

(rule
 (alias preview-publish)
 (deps
  (alias worker-build)
   worker_runtime/index.mjs
   worker_runtime/compiled_runtime_bootstrap.mjs
   dist/worker/thunder_runtime.mjs
   (glob_files dist/worker/thunder_runtime.assets/*)
   %{dep:wrangler.toml}
   %{exe:packages/thunder_cli/main.exe})
 (locks thunder_preview_publish)
 (action
  (run
   %{exe:packages/thunder_cli/main.exe}
   preview-publish
    --metadata
    .thunder/preview.json
    --wrangler-template
    %{dep:wrangler.toml}
    --deploy-dir
    deploy
    --wasm
    dist/worker/thunder_runtime.mjs
   --artifact
   dist/worker/thunder_runtime.assets
   --runtime
   worker_runtime/index.mjs)))

(rule
 (alias deploy-prod)
 (deps
  (alias worker-build)
   worker_runtime/index.mjs
   worker_runtime/compiled_runtime_bootstrap.mjs
   dist/worker/thunder_runtime.mjs
   (glob_files dist/worker/thunder_runtime.assets/*)
   %{dep:wrangler.toml}
   %{exe:packages/thunder_cli/main.exe})
 (action
  (run
   %{exe:packages/thunder_cli/main.exe}
    deploy-prod
    --wrangler-template
    %{dep:wrangler.toml}
    --deploy-dir
    deploy
    --wasm
    dist/worker/thunder_runtime.mjs
   --artifact
   dist/worker/thunder_runtime.assets
   --runtime
   worker_runtime/index.mjs)))

(alias
 (name default)
 (deps (alias worker-build) (alias preview-publish)))

(rule
 (alias runtest)
 (deps worker_runtime/index_test.mjs worker_runtime/index.mjs
       worker_runtime/compiled_runtime_bootstrap.mjs)
 (action (run node --test worker_runtime/index_test.mjs)))
